fix: resolvido alguns bugs de overflow do conteúdo no signup.

--- a/src/app/components/default-login-layout-component/default-login-layout-component.component.scss
+++ b/src/app/components/default-login-layout-component/default-login-layout-component.component.scss
@@ -1,4 +1,4 @@
-@import '../default-login-layout-component/../../../styles/variables.scss';
+@import "../../../styles/variables.scss";
 
 main {
     display: flex;
@@ -8,76 +8,55 @@ main {
     height: 100%;
 
     section {
+        height: 100%; 
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        height: 100vh;
     }
-    
+
     .main-section {
         gap: 8px;
-        flex-grow: 1;
 
+        flex-grow: 1;
         background-color: $gray-background;
     }
 
     .form-section {
         flex-grow: 0.3;
-        padding: 0 35px;
-        
+        padding: 35px;
+
         img {
-            margin-bottom: 30px;
+            margin-bottom: 10px;
+        }
+
+        h2 {
+            font-size: 20px;
+            font-weight: bold;
+            margin-bottom: 20px;
         }
 
         .btn-wrapper {
+            display: flex;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
             width: 100%;
-            gap: 30px;
-            
-            button {
-                width: 100%;
-                border-radius: 8px;
-                font-size: 16px;
-                font-weight: 500;
-                border: none;
-                background-color: transparent;
-                padding: 12px 24px;
-                cursor: pointer;
-    
-                &:disabled {
-                    opacity: 0.8;
-                }
-
-                &.btn-primary {
-                    background-color: $primary-color;
-                    color: white; 
-                    box-shadow: 0px 8px 12px 0px #9440FF33;
-                }
-    
-                &.btn-secondary {
-                    border: 1px solid $primary-color;
-                    color: $primary-color;
-                }
-            }
+            gap: 5px;
 
             .divider {
-                font-size: 14px;
-                color: $gray-background;
-                font-weight: 400;
-                
                 display: flex;
-                flex-direction: row;
                 align-items: center;
                 justify-content: center;
                 gap: 20px;
-                
-                text-transform: uppercase;
                 width: 100%;
-                
+
+                font-size: 14px;
+                color: $gray-background;
+                font-weight: 400;
+                text-transform: uppercase;
+
                 div {
                     flex-grow: 1;
                     height: 2px;
@@ -85,14 +64,31 @@ main {
                 }
             }
 
-        }
+            button {
+                width: 100%;
+                border-radius: 8px;
+                font-size: 16px;
+                font-weight: 500;
+                border: none;
+                background: transparent;
+                padding: 12px 24px;
+                cursor: pointer;
 
-        h2 {
-            font-size: 20px;
-            font-weight: bold;
-            font-family: 'Poppins', sans-serif;
-            margin-bottom: 45px;
+                &:disabled {
+                    opacity: 0.8;
+                }
+    
+                &.btn-primary {
+                    background-color: $primary-color;
+                    color: white;
+                    box-shadow:0px 8px 12px rgba(148.23004603385925, 64.33935597538948, 255, 0.20000000298023224);
+                }
+    
+                &.btn-secondary {
+                    border: 1px solid $primary-color;
+                    color: $primary-color;
+                }
+            }
         }
     }
 }
-
